# OpenSuperWhisper

./: .aiderignore  .gitignore  .gitmodules  Bridge.h  CLAUDE.md  CRUSH.md  HOW_TO_RUN.md  Readme.md  SECURITY.md  SKILL.md  TRIAGE.md  UI_IMPROVEMENT_SUMMARY.md  appcast-x86_64.xml  appcast.xml  debug_accessibility.sh  debug_mistral.sh  notarize_app.sh  parakeet_download_analysis.md  run.sh  security-report.md
.crush/: crush.db  crush.db-shm
MediaRemoteHelper/: OSWMediaRemote.swift
OpenSuperWhisper/: AppContextModelRules.swift  AppContextSettingsView.swift  AppIcon.icns  AudioRecorder.swift  CLI.swift  ContentView.swift  FileDropHandler.swift  GrammarEngine.swift  GrammarModelManager.swift  GroqSettingsSection.swift  Localizable.xcstrings  MIGRATION_MYMONKEYS.md  MIGRATION_QUESTIONS.md  MediaPlaybackController.swift  MicrophoneService.swift  ModelCatalog.swift  ModifierKeyMonitor.swift  MoonshineModelManager.swift  MoonshineModelSection.swift  OpenSuperWhisper-Info.plist  OpenSuperWhisperApp+ToastHost.swift  OpenSuperWhisperApp.swift  PermissionsManager.swift  RemoteServerSettingsView.swift  RemoteSettingsSection.swift  SenseVoiceModelManager.swift  SenseVoiceModelSection.swift  Settings.swift  ShortcutManager.swift  SingleKeyCaptureView.swift  SourceCapture.swift  SystemVolumeController.swift  (+8 more)
OpenSuperWhisper-iOS/: Info.plist  OpenSuperWhisper-iOS.entitlements  iOSApp.swift
OpenSuperWhisper-iOSTests/: OpenSuperWhisper_iOSTests.swift
OpenSuperWhisper.xcodeproj/: project.pbxproj
libllama/: CMakeLists.txt  llama_grammar_helper.cpp  llama_grammar_helper.h
(+139 files in other folders)
